--- a/index.html
+++ b/index.html
@@ -64,5 +64,34 @@
         </div>
       </div>
     </section>
+
+    <div class="animation">
+      <div class="animation-icon">
+        <img src="./img/logo1.svg" alt="" />
+        <img src="./img/logo2.svg" alt="" />
+        <img src="./img/logo3.svg" alt="" />
+        <img src="./img/logo4.svg" alt="" />
+        <img src="./img/logo5.svg" alt="" />
+        <img src="./img/logo1.svg" alt="" />
+        <img src="./img/logo2.svg" alt="" />
+        <img src="./img/logo3.svg" alt="" />
+        <img src="./img/logo4.svg" alt="" />
+        <img src="./img/logo5.svg" alt="" />
+      </div>
+    </div>
+
+    <div class="video-container">
+      <div class="video">
+        <div class="border">
+            <img src="./img/quick-demo-icon.svg" alt="" />
+            <p>Quick Demo</p>
+        </div>
+      </div>
+
+      <div class="video-text">
+        <p><b>Better</b> user satisfaction</p>
+        <p>Our customer support AI tool is an advanced software solution that helps businesses provide efficient and personalized support to their customers.</p>
+      </div>
+    </div>
   </body>
 </html>
